infrastructure/base/monitoring/kube-prometheus-stack/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: prometheus-basic-auth
