infrastructure/base/monitoring/kube-prometheus-stack/ingress-prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-internal
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-prometheus-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prometheus.sarma.love
    secretName: sarma-wildcard-tls
  rules:
  - host: prometheus.sarma.love
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
